# BTU_RM_So26

./: .gitignore  AGENTS.md  README.md  main.py  notes.txt  plan.md  pyproject.toml
Papers/: Wang_et_al_2022_Structural_Functions.md
Poster/: Music_AI_Template.pptx  SSTMA.key
docs/: results.md
loaders/: harmonix.py
notebooks/: 01_data_exploration.ipynb  01_harmonic_cnn.ipynb  02_spectnt.ipynb  02_target_generation.ipynb  03_model_definition.ipynb  03_spectnt_ctl.ipynb  04_training.ipynb  05_evaluation.ipynb  06_results_visualization.ipynb  07_structure_visualization.ipynb  colab_training.ipynb  data_prep.ipynb  utils.py
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
scripts/: download_audio.py
src/: ctl_loss.py  data_utils.py  dataset.py  features.py  metrics.py  postprocessing.py  training.py
src/models/: harmonic_cnn.py  spectnt.py
utils/: augmentations.py  dataset.py  label_conversion.py  losses.py  metrics.py  postprocessing.py  smoothing.py  spectnt.py  target_generation.py
