[project]
name = "research-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "mir-eval>=0.7",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "tqdm>=4.66.0",
    "yt-dlp",
]
