[project]
name = "btu-rm-sose26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "ipykernel>=7.3.0",
  "librosa>=0.11.0",
  "matplotlib>=3.11.0",
  "mir-eval>=0.8.0",
  "nbconvert>=7.17.1",
  "numpy>=2.4.0",
  "pandas>=3.0.0",
  "torch>=2.11.0",
  "torchaudio>=2.11.0",
  "torchvision>=0.26.0",
  "tqdm>=4.68.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
